        - Ordenação por Quantidade.
        - Filtro de seleção por Status.
        - Filtro de data por Data.
    - Adicionado paginação.
    - Adicionado botão de Exibir resultados por Pagina.
    - Adicionado barra de pesquisa global.

- Tabela Pedidos Administradores
    - Adicionado sistema de filtros:
        - Ordenação por ID.
        - Pesquisa por Nome.
        - Filtro de seleção por entreposto.
        - Filtro de seleção por setor.
        - Filtro de seleção por impressoras.
        - Ordenação por Quantidade.
        - Filtro de seleção por Status.
        - Filtro de data por Data.
    - Adicionado paginação.
    - Adicionado botão de Exibir resultados por Pagina.
    - Adicionado barra de pesquisa global.


### CHANGED
    - Alterado design das tabelas de Meus Pedidos e Pedidos Administradores.


### PLANNED
- Adicionar paginação em todas as tabelas (Estoque).
- Adicionar Envio de email ao clicar em "Enviar" na pagina de Adm - Pedidos.
- Adicionar sistema de usuarios.

///////////////////////////////////////////////////////////////////////////////////////////////////////


## [1.0.5] - 

### ADDED
- Adicionado botão de informação ao lado do campo de usuário e senha na pagina de login.
- Adicionado o numero da versão no canto inferior direito das paginas login e index.

### CHANGED 
- Ajustes na consulta SQL da página Meus Pedidos para visibilidade dos entrepostos.
(Criado view_pedidos_entrepostos2).
- Ajuste do sender de emails para intranet@bj.coop.br.
- Ajuste na visibilidade dos entrepostos na aba Solicitar Toner.
- Ajuste Administradores.
- Ajuste do campo Quantidade na aba Solicitar Toner, alterado de Text Field para Radio Button.
- Ajuste no texto e visual no botão de Logoff (agora "Sair").
- Trocado a fonte geral de "Arial" para "Roboto".

### FIXED
- Corrigido hover nos botões não mudar cor para verde.

### REMOVED
- Retirado a opção de enviar/cancelar pedidos na aba Meus Pedidos.

### CI/CD
- Ajustes no Kubernetes (metrics-server).
