@@ -3,3 +3,4 @@ flask_mail==0.10.0
 ldap3==2.9.1
 mysql_connector_repackaged==0.3.1
 mysql-connector-python==8.0.33
+Flask-Login==0.6.3
